# fpm

./: .gitignore  Cargo.toml  LICENSE  README.md  install.ps1
.github/: copilot-instructions.md
.github/instructions/: artifacts.instructions.md  common.instructions.md  devops.md  gherkin.md  impersonation.instructions.md  post-mortems.instructions.md  profiling.md  references.instructions.md
.github/prompts/: _add-post-mortem.prompt.md  _git_commit.prompt.md  _prompt-example.prompt.md  _refactor_mod_names.prompt.md  _write_review_gherkin_specs.prompt.md
.github/workflows/: ci.yml  release.yml
example-bundle-repos/: README.md
example-bundle-repos/example-1/: README.md  bundle.toml
example-bundle-repos/example-2/: README.md  bundle.toml
example-bundle-repos/example-2/components/: button.css  card.css
example-bundle-repos/example-3/: README.md  bundle.toml
example-bundle-repos/example-3/styles/: reset.css  variables.css
examples/: bundle.toml
scripts/: README.md
scripts/devops/: RELEASE_GUIDE.md  build.ps1  recreate-release.ps1  release.ps1
scripts/profiling/: launch_profiling.ps1
scripts/tests/: run_integration_tests.ps1  run_local_integration_tests.ps1  run_unit_tests.ps1
scripts/utils/: _copilot_run.ps1  _show_file_tree.ps1
scripts/utils/mod_renaming/: README.md  (+3 more)
src/: lib.rs  main.rs
src/cli/: mod.rs
src/commands/: mod.rs
src/config/: mod.rs
src/git/: mod.rs
src/integration_tests/: mod.rs
src/local_integration_tests/: mod.rs
src/test_utils/: mod.rs
src/types/: mod.rs
src/unit_tests/: mod.rs
src/version/: mod.rs
(+6 files in other folders)
