[package]
name = "fpm"
version = "0.1.1-beta.1"
edition = "2021"
description = "A file package manager that resembles Git and NPM, but for files in general"
authors = ["DragonAxe Software"]
license = "MIT"
repository = "https://github.com/DragonAxeSoftware/fpm"
keywords = ["file-manager", "bundle", "package-manager", "git"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
# CLI framework
clap = { version = "4.4", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

# Git operations
git2 = "0.18"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# File system utilities
walkdir = "2.4"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# URL parsing
url = "2.5"

# Colored terminal output
colored = "2.1"

# Async trait for dependency injection
async-trait = "0.1"

[dev-dependencies]
tempfile = "3.10"
assert_cmd = "2.0"
predicates = "3.1"

[lib]
name = "fpm"
path = "src/lib.rs"

[[bin]]
name = "fpm"
path = "src/main.rs"
test = false  # Tests are in lib.rs, not main.rs
